# gitspatch

./: .editorconfig  .env.template  .env.testing  .gitignore  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  demo.yml  documentation.yml
docs/reference/: gitspatch.md
docs/stylesheets/: extra.css
gitspatch/: __init__.py  app.py  exceptions.py  main.py  worker.py
gitspatch/core/: __init__.py  crypto.py  database.py  lifespan.py  logging.py  redis.py  request.py  responses.py  session.py  settings.py  task.py  templating.py
gitspatch/forms/: __init__.py  _webhook.py
gitspatch/guards/: __init__.py  _user_session.py
gitspatch/migrations/: env.py
gitspatch/migrations/versions/: 2024-11-09-1437_add_user.py  2024-11-10-1522_add_user_and_usersession.py  2024-11-11-1106_add_user_and_usersession.py  2024-11-11-1453_add_user_and_usersession.py  2024-11-11-1527_add_models.py  2024-11-22-1653_add_models.py  2024-11-24-1336_add_models.py  2024-11-30-1457_add_models.py  2024-12-15-1051_initial_migration.py  2024-12-15-1536_fix_webhookevent_workflow_run_id_type.py  2024-12-21-1327_initial_migration.py  2024-12-30-1033_add_saas_properties.py
gitspatch/models/: __init__.py  _base.py  _id.py  _timestamp.py  _user.py  _user_session.py  _webhook.py  _webhook_event.py  _webhook_event_delivery.py  base.py  user.py
gitspatch/repositories/: __init__.py  _base.py  _user.py  _user_session.py  _webhook.py  _webhook_event.py  _webhook_event_delivery.py
gitspatch/routes/: __init__.py  _action.py  _app.py  _auth.py  _github.py  _polar.py  _webhook.py
gitspatch/services/: __init__.py  _dispatcher.py  _github.py  _github_oidc.py  _polar.py  _user.py  _user_session.py  _webhook.py  _webhook_event.py  _webhook_event_delivery.py
gitspatch/static/: output.css
gitspatch/tasks/: __init__.py  dispatcher.py
gitspatch/templates/: base.jinja2  index.jinja2  layout.jinja2  terms.jinja2
gitspatch/templates/app/: index.jinja2  layout.jinja2
gitspatch/templates/app/account/: get.jinja2
gitspatch/templates/app/events/: list.jinja2
gitspatch/templates/app/webhooks/: create.jinja2  delete.jinja2  get.jinja2  token.jinja2  workflow.yml.jinja2
gitspatch/templates/app/webhooks/create/: progress.jinja2  step1.jinja2  step2.jinja2  step3.jinja2
gitspatch/templates/macros/: buttons.jinja2  forms.jinja2  icons.jinja2  modals.jinja2  pagination.jinja2
tests/: _assertions.py  _fixtures_data.py  conftest.py  test_add.py  test_app.py  test_core_crypto.py  test_routes_app.py
