[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true

[[tool.mypy.overrides]]
module = "jwcrypto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wtforms.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=gitspatch/ --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = ["auth"]

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "gitspatch/__init__.py"

[tool.hatch.envs.default]
python = "3.12"
installer = "uv"
dependencies = [
    "asgi-lifespan",
    "harlequin[postgres]",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
    "pytest-mock",
    "watchfiles",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff check --fix .",
  "mypy gitspatch/",
]
lint-check = [
  "ruff format --check .",
  "ruff check .",
  "mypy gitspatch/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
server = [
    "docker compose up -d",
    "npm run build",
    "uvicorn gitspatch.main:app",
]
server-watch = "watchfiles --ignore-paths 'gitspatch/static/' 'hatch run server' gitspatch/"
worker = [
    "docker compose up -d",
    "dramatiq -p 1 -t 1 --watch gitspatch gitspatch.main:worker"
]
open_db = "harlequin -a postgres 'postgresql://gitspatch:gitspatch@localhost:5432/gitspatch'"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "gitspatch"
authors = [
  { name = "gitspatch", email = "francois@francoisvoron.com" }
]
description = "Connect any webhook to GitHub Actions"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "babel==2.16.0",
    "dramatiq[redis]==1.17.1",
    "httpx==0.28.1",
    "httpx-oauth==0.16.1",
    "jinja2==3.1.5",
    "jwcrypto==1.5.6",
    "orjson==3.10.14",
    "polar-sdk==0.11.1",
    "pydantic_settings==2.7.0",
    "python-multipart==0.0.20",
    "redis[hiredis]==5.2.1",
    "sentry-sdk[starlette]==2.19.2",
    "sqlalchemy[asyncio]==2.0.36",
    "starlette==0.45.0",
    "structlog==24.4.0",
    "uvicorn==0.34.0",
    "WTForms==3.2.1",
]

[project.urls]
Documentation = "https://docs.gitspatch.dev"
Source = "https://github.com/gitspatch/gitspatch"
